--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,16 @@ dependencies:
   firebase_core: ^3.1.1
   firebase_database: ^11.0.2
   firebase_auth: ^5.1.1
+  ionicons: ^0.2.2
+  flutter_login: ^5.0.0
+  flutter_screenutil: ^5.9.3
+  flutter_helper_utils: ^5.0.0
+  animated_login: ^1.7.2
+  flutter_animate: ^4.5.0
+  cloud_firestore: ^5.0.2
+  fluttertoast: ^8.2.6
+  get_it: ^7.7.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +69,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/fonts/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
