--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   fluttertoast: ^8.2.6
   get_it: ^7.7.0
   google_fonts: ^6.2.1
+  geolocator: ^12.0.0
+  geocoding: ^3.0.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
