--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   geolocator: ^12.0.0
   geocoding: ^3.0.0
   dio: ^5.4.3+1
+  weather: ^3.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
