--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   google_sign_in: ^6.2.1
   firebase_core: ^3.1.1
   firebase_database: ^11.0.2
@@ -54,6 +54,8 @@ dependencies:
   dio: ^5.4.3+1
   weather: ^3.1.1
   intl: ^0.19.0
+  icons_plus: ^4.0.0
+  flutter_icons_plus: ^1.0.3
 
 dev_dependencies:
   flutter_test:
