current location taken to show the informantion of weather

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,12 @@ dependencies:
   icons_plus: ^4.0.0
   flutter_icons_plus: ^1.0.3
 
+
+  # Database
+  sqflite:
+  path:
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
