--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,10 @@ description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/basarsoft-bilgi-teknolojileri-logo.png"
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -59,11 +62,14 @@ dependencies:
 
 
 
+
+
   # Database
   sqflite:
   path:
   google_maps_flutter:
   persistent_bottom_nav_bar_v2: ^5.3.0
+  flutter_launcher_icons: ^0.13.1
 
 
 dev_dependencies:
