--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   google_maps_flutter:
   persistent_bottom_nav_bar_v2: ^5.3.0
   flutter_launcher_icons: ^0.13.1
+  fl_chart: ^0.40.0
 
 
 dev_dependencies:
