--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^5.3.0
   flutter_launcher_icons: ^0.13.1
   fl_chart: ^0.40.0
-
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
