--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,13 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
+    dependencies {
+        classpath 'com.github.triplet.play:play-publisher:3.5.0' //.env
     }
 }
+
 
 rootProject.buildDir = "../build"
 subprojects {
@@ -16,3 +21,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
