--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   geocoding: ^3.0.0
   dio: ^5.4.3+1
   weather: ^3.1.1
-  intl: ^0.19.0
+  intl:
   icons_plus: ^4.0.0
   flutter_icons_plus: ^1.0.3
 
@@ -85,8 +85,12 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   mockito:
   test:
+  fake_cloud_firestore:
   sqflite_common_ffi:
   mocktail:
+  firebase_auth_mocks:
+  build_runner:
+
 
 
 # For information on the generic Dart part of this file, see the
